--- a/.github/workflows/docker-publish-github.yml
+++ b/.github/workflows/docker-publish-github.yml
@@ -1,4 +1,4 @@
-name: Create and publish a Docker image
+name: Publish Docker Image
 
 on:
 #   push:
@@ -36,7 +36,7 @@ jobs:
       - name: Build and push Docker image
         uses: docker/build-push-action@ad44023a93711e3deb337508980b4b5e9bcdc5dc
         with:
-          context: AvisiTaskScheduler/
+          context: /
           push: true
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
