--- a/.github/workflows/docker-publish-github.yml
+++ b/.github/workflows/docker-publish-github.yml
@@ -1,9 +1,8 @@
 name: Publish Docker Image
 
 on:
-#   push:
-#     branches: ['release']
-  workflow_dispatch
+   push:
+     branches: [master]
   
 
 
